fixed the navbar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
     <meta name="description" content="Bharani Kumar Reddy Kudala - Full-Stack Developer & Computer Science Master's Student at Northern Arizona University" />
     <meta name="author" content="Bharani Kumar Reddy Kudala" />
     <meta name="keywords" content="Full-Stack Developer, Web Developer, Computer Science, Northern Arizona University, React, JavaScript, Portfolio" />
